--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,10 @@ body,
   position: absolute;
   z-index: 1;
   top: 0;
-  right: 0;
   margin: 20px;
   display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
 input {
