--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body,
   position: absolute;
   z-index: 1;
   top: 0;
-  margin: 20px;
+  margin-top: 20px;
   display: flex;
   width: 100%;
   justify-content: center;
